tests/NormalTests/paczka1/fuzzy1/77918234.err
Error in line 9: l5Nn A89 39,1
Error in line 40: hUloFmpN A89 -1,3
